<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/readhistory_loading_over"
            android:src="@drawable/readhistory_loading_over" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/input"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="#33000000" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_booklength"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/sb_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:gravity="center"
            android:max="2048"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/_2048k"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/txt" />

        <CheckBox
            android:id="@+id/umd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umd" />

        <CheckBox
            android:id="@+id/epub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epub" />
    </LinearLayout>

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_file_path"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:drawableLeft="@drawable/folder_small_edit"
        android:gravity="center_vertical"
        android:text="@string/_sdcard_"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bb_shadow"
            android:onClick="input"
            android:text="@string/one_input" />

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/bb_shadow"
            android:onClick="mybook"
            android:text="@string/my_books" />
    </LinearLayout>

</LinearLayout>